--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,13 @@ jobs:
         curl -L -o DNGConverter_17_5.dmg https://download.adobe.com/pub/adobe/dng/mac/DNGConverter_17_5.dmg
         # Mount the DMG file
         hdiutil attach DNGConverter_17_5.dmg
-        # Check if Rosetta2 is installed
-        ls /Library/Apple/usr/libexec/oah/libRosettaRuntime
+        # Rosetta2 is not installed
+        # ls /Library/Apple/usr/libexec/oah/libRosettaRuntime
+
         # Install Adobe DNG Converter
         installer -pkg /Volumes/DNGConverter_17_5/DNGConverter_17_5.pkg -target .
+        # Attempt to install Rosetta2 
+        sudo softwareupdate --install-rosetta
         # Unmount the DMG file
         hdiutil detach /Volumes/DNGConverter_17_5
 
