--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
 
     - name: Test organizeGoProDNG.sh
       run: |
+        chmod +x tests/test_organizeGoProDNG.sh
         ./tests/test_organizeGoProDNG.sh
 
     - name: Test compare_AdobeDNGConverter_arguments.sh
