Attempting to cache the DNGConverter.dmg

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v5
 
-    - name: Install Adobe DNG Converter
+    - name: Cache Adobe DNG Converter DMG
+      id: cache-dmg
+      uses: actions/cache@v3
+      with:
+        path: DNGConverter_17_5.dmg
+        key: dngconverter-17-5
+        restore-keys: |
+          dngconverter-
+
+    - name: Download Adobe DNG Converter
+      if: steps.cache-dmg.outputs.cache-hit != 'true'
       run: |
         printf -- "-Downloading the DNG Converter .dmg file\n"
         curl -L -o DNGConverter_17_5.dmg https://download.adobe.com/pub/adobe/dng/mac/DNGConverter_17_5.dmg
 
+    - name: Install Adobe DNG Converter
+      run: |
         printf -- "\n\n-Mounting the DMG file\n"
         hdiutil attach DNGConverter_17_5.dmg
 
@@ -38,6 +50,35 @@ jobs:
 
         printf -- "\n\n-Unmounting the DMG file\n"
         hdiutil detach /Volumes/DNGConverter_17_5
+
+    - name: Verify installation
+      run: |
+        /Applications/Adobe\ DNG\ Converter.app/Contents/MacOS/Adobe\ DNG\ Converter -d
+
+    - name: Upload installed environment
+      uses: actions/upload-artifact@v4
+      with:
+        name: dng-env
+        path: /Applications/Adobe\ DNG\ Converter.app
+        retention-days: 30
+
+  test:
+    needs: build
+    runs-on: macos-15
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v5
+
+    - name: Download installed environment
+      uses: actions/download-artifact@v4
+      with:
+        name: dng-env
+        path: /Applications/Adobe\ DNG\ Converter.app
+
+    - name: Verify installation
+      run: |
+        /Applications/Adobe\ DNG\ Converter.app/Contents/MacOS/Adobe\ DNG\ Converter -d
 
     - name: Test organizeGoProDNG.sh
       run: |
