--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,13 @@ on:
       - '**'  # Runs on all branches
   pull_request:
 
+env:
+  # These images are arm64 unless specified: https://github.com/actions/runner-images
+  RUNNER_OS: [macos-15] # macOS CI is expensive: [macos-14, macos-15, macos-15-intel, macos-26]
+
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        # These images are arm64 unless specified: https://github.com/actions/runner-images
-        os: [macos-15] # macOS CI is expensive: [macos-14, macos-15, macos-15-intel, macos-26]
+    runs-on: ${{ env.RUNNER_OS }}
 
     steps:
     - name: Checkout repository
@@ -64,7 +64,7 @@ jobs:
 
   test:
     needs: build
-    runs-on: macos-15
+    runs-on: ${{ env.RUNNER_OS }}
 
     steps:
     - name: Checkout repository
@@ -78,6 +78,9 @@ jobs:
 
     - name: Verify installation
       run: |
+        ls -l
+        ls -l /Applications
+        sudo cp -R "Adobe DNG Converter.app" /Applications/
         /Applications/Adobe\ DNG\ Converter.app/Contents/MacOS/Adobe\ DNG\ Converter -d
 
     - name: Test organizeGoProDNG.sh
