Remove artifacts, cache only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,13 +54,6 @@ jobs:
         du -sh /Applications/Adobe*
         /Applications/Adobe\ DNG\ Converter.app/Contents/MacOS/Adobe\ DNG\ Converter -d
 
-    - name: Upload installed environment
-      uses: actions/upload-artifact@v4
-      with:
-        name: dng-env
-        path: /Applications/Adobe\ DNG\ Converter.app
-        retention-days: 30
-
   test:
     needs: build
     runs-on: *runner-os
@@ -69,20 +62,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v5
 
-    - name: Download installed environment
-      uses: actions/download-artifact@v4
+    - name: Restore Adobe DNG Converter.app from cache
+      id: cache-dng-app
+      uses: actions/cache@v3
       with:
-        name: dng-env
-        path: /tmp/dng-app
-
-    - name: Move environment to /Applications
-      run: |
-        sudo mkdir -p "/Applications/Adobe DNG Converter.app"
-        sudo cp -R /tmp/dng-app/* "/Applications/Adobe DNG Converter.app/"
-        sudo chmod +x "/Applications/Adobe DNG Converter.app/Contents/MacOS/Adobe DNG Converter"
+        path: /Applications/Adobe\ DNG\ Converter.app
+        key: dng-app-17-5
+        restore-keys: |
+          dng-app-
 
     - name: Verify installation
       run: |
+        ls -l /Applications
+        du -sh /Applications/Adobe*
         "/Applications/Adobe DNG Converter.app/Contents/MacOS/Adobe DNG Converter" -d
 
     - name: Test organizeGoProDNG.sh
