--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         printf -- "\n\n-Mounting the DMG file\n"
         hdiutil attach DNGConverter_17_5.dmg
 
-        # Rosetta2 is installed on arm64 Macs
+        # Rosetta2 is needed for AdobeDNGConverter and is installed on arm64 Macs
         if [ -e /Library/Apple/usr/libexec/oah/libRosettaRuntime ]; then
           printf -- "\n\n-Running on Apple Silicon\n"
         else
@@ -49,9 +49,7 @@ jobs:
         printf -- "\n\n-Unmounting the DMG file\n"
         hdiutil detach /Volumes/DNGConverter_17_5
 
-    - name: Verify installation
-      run: |
-        du -sh /Applications/Adobe*
+        printf -- "\n\n-Verifying the installation\n"
         /Applications/Adobe\ DNG\ Converter.app/Contents/MacOS/Adobe\ DNG\ Converter -d
 
   test:
@@ -73,8 +71,6 @@ jobs:
 
     - name: Verify installation
       run: |
-        ls -l /Applications
-        du -sh /Applications/Adobe*
         "/Applications/Adobe DNG Converter.app/Contents/MacOS/Adobe DNG Converter" -d
 
     - name: Test organizeGoProDNG.sh
